clean-up src branch to latest, make about its own page instead of an overlay

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 	</div>	
 
 	<div id="ufo" class="">
+		<!-- fly, fly away -->
 	</div>
 
 	<div id="onett">
@@ -30,6 +31,5 @@
 		<div id="ending" class=""></div>
 	</div>
 
-
 {% include '_tpls/nav.html' %}
-{% include '_tpls/footer.html' %}
+{% include '_tpls/footer.js.html' %}
