--- a/src/talks/index.html
+++ b/src/talks/index.html
@@ -15,7 +15,7 @@
 			</h2>
 
 			<p>
-				I would like to share more of work I've been a part of. If you'd like to work together for your event: bysusanlin at gmail.
+				I enjoy speaking about design process especially where it meets the code and how it relates to illustration. I would like to share more of work I've been a part of. If you'd like to work together for your event: bysusanlin at gmail.
 			</p>
 
 			<p>
@@ -36,13 +36,20 @@
 
 		<div class="video">
 
-			<p> 
-				Speaking the Code. <a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">Slides on SpeakerDeck.</a>
-			</p>
+			<img src="/images/bysusanlin-speaking.jpg">
+
+			<br><br>
 
 			<div class="video-wrapper">
 				<iframe width="500" height="375" src="//www.youtube.com/embed/KWPnozbp4us" frameborder="0" allowfullscreen></iframe>
 			</div>
+
+			<h2> Speaking the Code </h2>
+			<p> 
+				Recording of my talk for IXDA SF. I spoke about working with engineers using Trulia's component library.
+				<br><br>
+				<a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">Slides on SpeakerDeck.</a>
+			</p>
 
 		</div> <!-- video -->
 
