--- a/src/_tpls/footer.html
+++ b/src/_tpls/footer.html
@@ -3,7 +3,7 @@
 
 		<ul>
 
-			<a href="#" class="aboutOverlay">
+			<a href="about">
 				<li>
 					01. About
 				</li>
@@ -40,122 +40,6 @@
 		</div>
 
 	</footer>
-
-	<!-- dim the world -->
-	<div class="overlay"> </div>
-
-	<div class="about">
-		
-		<div id="closeOverlay">
-			<a href="#" class="closeAction">&times;</a>
-		</div>
-
-		<p>
-
-			<img src="/images/bysusanlin-portrait.png" height="100px">
-
-			<br><br>
-
-			Hello World; Susan designs for a living. Currently, she works on <a href="http://guestcenter.opentable.com">OpenTable Guest Center.</a> She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
-
-			<br><br>
-
-			She sketches incessantly. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes</a> out in the wild. She paints a <a href="http://cargocollective.com/susan/Ghibli-Stained-Glass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes an obsession of the craft exceeds all. 
-
-			<br><br>
-
-			She enjoys games and books. <br>				
-			She made this <a href="https://github.com/bysl/bysl.github.io">bit of the internet!</a>
-
-		</p>
-
-	</div>
-
-	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
-	<script type="text/javascript">
-
-  	$(document).ready(function(){
-			
-			$(".aboutOverlay").on("click", function() {
-				$('.overlay').fadeIn("fast");
-				$('.about').fadeIn("fast");
-			});			
-
-			$(".closeAction").on("click", function() {
-				$('.overlay').fadeOut("fast");
-				$('.about').fadeOut("fast");
-			});
-
-			$(window).scroll(function() {
-
-				var scrollTopValue = $(window).scrollTop();
-
-				if(parseInt(scrollTopValue/14)%2) {
-					$('#earthbounded').removeClass('left');
-					$('#earthbounded').addClass('right');
-				}
-				else {
-					$('#earthbounded').removeClass('right');
-					$('#earthbounded').addClass('left');
-				}
-
-				var windowHeightValue = $(window).height();
-
-				// Waiting until reaching center
-				var startGame = parseInt(828-windowHeightValue/2);
-				if(scrollTopValue >= startGame) {
-					$('#earthbounded').css('position', 'fixed');
-					$('#earthbounded').css('top', '50%');
-				}
-				else {
-					$('#earthbounded').css('position', 'absolute');
-					$('#earthbounded').css('top', '828px');
-				}
-
-				// Board Saturn Valley UFO
-				var boardUFO = parseInt(3148-windowHeightValue/2);
-				var phaseInterval = parseInt(windowHeightValue/6)
-				if(scrollTopValue >= boardUFO) {
-					$('#earthbounded').css("display", "none");
-				}
-				else {
-					$('#earthbounded').css("display", "block");
-				}
-
-				// Phased UFO
-				if(scrollTopValue >= boardUFO+phaseInterval) {
-					$('#distorter').removeClass('phased1');
-					$('#distorter').addClass('phased3');
-				}
-				else {
-					$('#distorter').addClass('phased1');
-					$('#distorter').removeClass('phased3');
-				}
-
-				if(scrollTopValue >= boardUFO+phaseInterval*2) {
-					$('#distorter').removeClass('phased3');
-				}
-
-				var showUFO = parseInt(4384-windowHeightValue/2);
-				if(scrollTopValue >= showUFO) {
-					$('#ufo').addClass('flying');
-				}
-				else {
-					$('#ufo').removeClass('flying');
-				}
-
-				var landUFO = parseInt(6374-windowHeightValue/2);
-				if(scrollTopValue >= landUFO) {
-					$('#ufo').removeClass('flying');
-					$('#ending').addClass('show');
-				}
-				else {
-					$('#ending').removeClass('show');
-				}
-
-			});
-		}); //document ready
-	</script>
 
 </body>
 </html>
