--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -1,4 +1,3 @@
-
 	<nav>
 		<ul>
 			<a href="/">
@@ -6,7 +5,7 @@
 					<img src="/images/bysusanlin-totoro.svg" height="40px">
 				</li>
 			</a>
-			<a href="#" class="aboutOverlay">
+			<a href="/about">
 				<li>
 					About
 				</li>
@@ -26,5 +25,11 @@
 					Blog
 				</li>
 			</a>
+			<li class="typeLowlight">
+				&mdash;
+			</li>								
+			<li class="typeHighlight">
+				&#10048;
+			</li>
 		</ul>
 	</nav>
