reorganized images, make about its own page

--- a/work/index.html
+++ b/work/index.html
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" href="/css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
-	<script src="//use.typekit.net/bku8hxc.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
+	<script src="http://use.typekit.net/bku8hxc.js"></script>
+	<script>try{Typekit.load();catch(e){</script>
 
 	<title>Susan &times; Work</title>
 
@@ -128,7 +128,9 @@
 				<br>
 				<a href="https://twitter.com/Medium/status/507981746038509568">Featured post</a> on Medium &mdash; <a href="https://medium.com/poignantly-ordinary/the-1000th-cut-c588424c2a1a">The 1000th Cut</a>
 				<br>
-				Betwixt advice for freelancers &mdash; <a href="http://betwixt.is/the-league-of-kind-and-kindred/yes-and-yes-and-yes-and-yes">On saying 'Yes!' to everything</a>
+				Betwixt Letter Series &mdash; <a href="http://betwixt.is/the-league-of-kind-and-kindred/yes-and-yes-and-yes-and-yes">On saying 'Yes!' to everything</a>
+				<br>
+				Betwixt Mini-interview &mdash; <a href="http://betwixt.is/delighted-by/designer-miniviews-susan-lin">Interview with Susan Lin</a>
 				<br>
 				On my personal blog &mdash; <a href="http://sketch.bysusanlin.com/post/96124823213/not-everything-can-be-sparkly">Not everything can be sparkly</a>
 			</p>
@@ -164,23 +166,22 @@
 
 		<div>
 			<img src="/images/work/nasa.png">
-			<h2> Old work that's interesting: NASA </h2>
+			<h2> NASA </h2>
 			<p> 
-				I interned and freelanced with NASA's education outreach team who worked on the James Webb Space Telescope. I illustrated art for 2 games <a href="http://jwst.nasa.gov/scope.html">Scope it out!</a> and <a href="http://jwst.nasa.gov/build.html">Build It Yourself: Satellite!</a> I also made print designs which were <a href="http://sketch.bysusanlin.com/tagged/nasa">seen on the set of The Big Bang Theory.</a>
+				Old work that's interesting. I interned and freelanced with NASA's education outreach team who worked on the James Webb Space Telescope. I illustrated art for 2 games <a href="http://jwst.nasa.gov/scope.html">Scope it out!</a> and <a href="http://jwst.nasa.gov/build.html">Build It Yourself: Satellite!</a> I also made print designs which were <a href="http://sketch.bysusanlin.com/tagged/nasa">seen on the set of The Big Bang Theory.</a>
 			</p>
 		</div>
 
 		<div>
 			<img src="/images/work/raincat.jpg">
-			<h2> Old work that's interesting: Indie Games </h2>
+			<h2> Indie Games </h2>
 			<p>
-				During college, I shipped <a href="http://www.gamecreation.org/search/node/susan%20lin">an indie game every semester.</a> The best of the bunch was Raincat &mdash; a 2D puzzle game where you keep the cat dry. <a href="http://raincat.bysusanlin.com">The site</a> I made to promote it has accrued over 16,000 views.
+				Old work that's interesting. During college, I shipped <a href="http://www.gamecreation.org/search/node/susan%20lin">an indie game every semester.</a> The best of the bunch was Raincat &mdash; a 2D puzzle game where you keep the cat dry. <a href="http://raincat.bysusanlin.com">The site</a> I made to promote it has accrued over 16,000 views.
 			</p>
 		</div>
 
-	</div>
+	</div> <!-- work -->
 	
-
 	<nav>
 		<ul>
 			<a href="/">
@@ -188,7 +189,7 @@
 					<img src="/images/bysusanlin-totoro.svg" height="40px">
 				</li>
 			</a>
-			<a href="#" class="aboutOverlay">
+			<a href="/about">
 				<li>
 					About
 				</li>
@@ -208,6 +209,12 @@
 					Blog
 				</li>
 			</a>
+			<li class="typeLowlight">
+				&mdash;
+			</li>								
+			<li class="typeHighlight">
+				&#10048;
+			</li>
 		</ul>
 	</nav>
 
@@ -215,7 +222,7 @@
 
 		<ul>
 
-			<a href="#" class="aboutOverlay">
+			<a href="about">
 				<li>
 					01. About
 				</li>
@@ -239,12 +246,6 @@
 				</li>
 			</a>
 
-			<a href="http://twitter.com/bysusanlin">
-				<li>
-					05. Twitter
-				</li>
-			</a>
-
 			<li class="typeHighlight">
 				&#10048;
 			</li>
@@ -258,54 +259,6 @@
 		</div>
 
 	</footer>
-
-	<!-- dim the world -->
-	<div class="overlay"> </div>
-
-	<div class="about">
-		
-		<div id="closeOverlay">
-			<a href="#" class="closeAction">&times;</a>
-		</div>
-
-		<p>
-
-			<img src="/images/bysusanlin-portrait.png" height="100px">
-
-			<br><br>
-
-			Hello World; Susan designs for a living. Currently, she works on <a href="http://guestcenter.opentable.com">OpenTable Guest Center.</a> She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
-
-			<br><br>
-
-			She sketches incessantly. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes</a> out in the wild. She paints a <a href="http://cargocollective.com/susan/Ghibli-Stained-Glass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes an obsession of the craft exceeds all. 
-
-			<br><br>
-
-			She enjoys games and books. <br>				
-			She made this <a href="https://github.com/bysl/bysl.github.io">bit of the internet!</a>
-
-		</p>
-
-	</div>
-
-	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
-	<script type="text/javascript">
-
-  	$(document).ready(function(){
-			
-			$(".aboutOverlay").on("click", function() {
-				$('.overlay').fadeIn("fast");
-				$('.about').fadeIn("fast");
-			});			
-
-			$(".closeAction").on("click", function() {
-				$('.overlay').fadeOut("fast");
-				$('.about').fadeOut("fast");
-			});
-
-		}); //document ready
-	</script>
 
 </body>
 </html>
