--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" href="/css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
-	<script src="//use.typekit.net/bku8hxc.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
+	<script src="http://use.typekit.net/bku8hxc.js"></script>
+	<script>try{Typekit.load();catch(e){</script>
 
 	<title>Susan &times; Internet</title>
 
@@ -27,6 +27,7 @@
 	</div>	
 
 	<div id="ufo" class="">
+		<!-- fly, fly away -->
 	</div>
 
 	<div id="onett">
@@ -46,8 +47,6 @@
 		<div id="ending" class=""></div>
 	</div>
 
-
-
 	<nav>
 		<ul>
 			<a href="/">
@@ -55,7 +54,7 @@
 					<img src="/images/bysusanlin-totoro.svg" height="40px">
 				</li>
 			</a>
-			<a href="#" class="aboutOverlay">
+			<a href="/about">
 				<li>
 					About
 				</li>
@@ -75,102 +74,19 @@
 					Blog
 				</li>
 			</a>
-		</ul>
-	</nav>
-
-	<footer>
-
-		<ul>
-
-			<a href="#" class="aboutOverlay">
-				<li>
-					01. About
-				</li>
-			</a>
-
-			<a href="/work">
-				<li>
-					02. Work
-				</li>
-			</a>
-
-			<a href="/talks">
-				<li>
-					03. Talks
-				</li>
-			</a>			
-
-			<a href="http://sketch.bysusanlin.com">
-				<li>
-					04. Blog
-				</li>
-			</a>	
-
-			<a href="http://twitter.com/bysusanlin">
-				<li>
-					05. Twitter
-				</li>
-			</a>
-
+			<li class="typeLowlight">
+				&mdash;
+			</li>								
 			<li class="typeHighlight">
 				&#10048;
 			</li>
-
 		</ul>
-
-		<div class="clear"></div>
-
-		<div class="footnote"> 
-			Last updated April 2015. P.S. I believe in you.
-		</div>
-
-	</footer>
-
-	<!-- dim the world -->
-	<div class="overlay"> </div>
-
-	<div class="about">
-		
-		<div id="closeOverlay">
-			<a href="#" class="closeAction">&times;</a>
-		</div>
-
-		<p>
-
-			<img src="/images/bysusanlin-portrait.png" height="100px">
-
-			<br><br>
-
-			Hello World; Susan designs for a living. Currently, she works on <a href="http://guestcenter.opentable.com">OpenTable Guest Center.</a> She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
-
-			<br><br>
-
-			She sketches incessantly. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes</a> out in the wild. She paints a <a href="http://cargocollective.com/susan/Ghibli-Stained-Glass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes an obsession of the craft exceeds all. 
-
-			<br><br>
-
-			She enjoys games and books. <br>				
-			She made this <a href="https://github.com/bysl/bysl.github.io">bit of the internet!</a>
-
-		</p>
-
-	</div>
-
+	</nav>
 	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
 	<script type="text/javascript">
 
   	$(document).ready(function(){
-			
-			$(".aboutOverlay").on("click", function() {
-				$('.overlay').fadeIn("fast");
-				$('.about').fadeIn("fast");
-			});			
-
-			$(".closeAction").on("click", function() {
-				$('.overlay').fadeOut("fast");
-				$('.about').fadeOut("fast");
-			});
-
+  		
 			$(window).scroll(function() {
 
 				var scrollTopValue = $(window).scrollTop();
@@ -210,18 +126,18 @@
 				// Phased UFO
 				if(scrollTopValue >= boardUFO+phaseInterval) {
 					$('#distorter').removeClass('phased1');
-					$('#distorter').addClass('phased3');
+					$('#distorter').addClass('phased2');
 				}
 				else {
 					$('#distorter').addClass('phased1');
-					$('#distorter').removeClass('phased3');
+					$('#distorter').removeClass('phased2');
 				}
 
 				if(scrollTopValue >= boardUFO+phaseInterval*2) {
-					$('#distorter').removeClass('phased3');
+					$('#distorter').removeClass('phased2');
 				}
 
-				var showUFO = parseInt(4404-windowHeightValue/2);
+				var showUFO = parseInt(4384-windowHeightValue/2);
 				if(scrollTopValue >= showUFO) {
 					$('#ufo').addClass('flying');
 				}
