--- a/talks/index.html
+++ b/talks/index.html
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" href="/css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
-	<script src="//use.typekit.net/bku8hxc.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
+	<script src="http://use.typekit.net/bku8hxc.js"></script>
+	<script>try{Typekit.load();catch(e){</script>
 	
 	<title>Susan &times; Talks</title>
 
@@ -52,7 +52,7 @@
 
 		<div class="video">
 
-			<img src="/images/bysusanlin-speaking.jpg">
+			<img src="/images/talks/bysusanlin-speaking.jpg">
 
 			<br><br>
 
@@ -71,7 +71,6 @@
 
 	</div> <!--talks-->
 
-
 	<nav>
 		<ul>
 			<a href="/">
@@ -79,7 +78,7 @@
 					<img src="/images/bysusanlin-totoro.svg" height="40px">
 				</li>
 			</a>
-			<a href="#" class="aboutOverlay">
+			<a href="/about">
 				<li>
 					About
 				</li>
@@ -99,6 +98,12 @@
 					Blog
 				</li>
 			</a>
+			<li class="typeLowlight">
+				&mdash;
+			</li>								
+			<li class="typeHighlight">
+				&#10048;
+			</li>
 		</ul>
 	</nav>
 
@@ -106,7 +111,7 @@
 
 		<ul>
 
-			<a href="#" class="aboutOverlay">
+			<a href="about">
 				<li>
 					01. About
 				</li>
@@ -130,12 +135,6 @@
 				</li>
 			</a>
 
-			<a href="http://twitter.com/bysusanlin">
-				<li>
-					05. Twitter
-				</li>
-			</a>
-
 			<li class="typeHighlight">
 				&#10048;
 			</li>
@@ -149,54 +148,6 @@
 		</div>
 
 	</footer>
-
-	<!-- dim the world -->
-	<div class="overlay"> </div>
-
-	<div class="about">
-		
-		<div id="closeOverlay">
-			<a href="#" class="closeAction">&times;</a>
-		</div>
-
-		<p>
-
-			<img src="/images/bysusanlin-portrait.png" height="100px">
-
-			<br><br>
-
-			Hello World; Susan designs for a living. Currently, she works on <a href="http://guestcenter.opentable.com">OpenTable Guest Center.</a> She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
-
-			<br><br>
-
-			She sketches incessantly. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes</a> out in the wild. She paints a <a href="http://cargocollective.com/susan/Ghibli-Stained-Glass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes an obsession of the craft exceeds all. 
-
-			<br><br>
-
-			She enjoys games and books. <br>				
-			She made this <a href="https://github.com/bysl/bysl.github.io">bit of the internet!</a>
-
-		</p>
-
-	</div>
-
-	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
-	<script type="text/javascript">
-
-  	$(document).ready(function(){
-			
-			$(".aboutOverlay").on("click", function() {
-				$('.overlay').fadeIn("fast");
-				$('.about').fadeIn("fast");
-			});			
-
-			$(".closeAction").on("click", function() {
-				$('.overlay').fadeOut("fast");
-				$('.about').fadeOut("fast");
-			});
-
-		}); //document ready
-	</script>
 
 </body>
 </html>
