--- a/index.html
+++ b/index.html
@@ -158,5 +158,47 @@
 		}); //document ready
 	</script>
 
+	<footer>
+
+		<ul>
+
+			<a href="about">
+				<li>
+					01. About
+				</li>
+			</a>
+
+			<a href="/work">
+				<li>
+					02. Work
+				</li>
+			</a>
+
+			<a href="/talks">
+				<li>
+					03. Talks
+				</li>
+			</a>			
+
+			<a href="http://sketch.bysusanlin.com">
+				<li>
+					04. Blog
+				</li>
+			</a>
+
+			<li class="typeHighlight">
+				&#10048;
+			</li>
+
+		</ul>
+
+		<div class="clear"></div>
+
+		<div class="footnote"> 
+			Last updated April 2015. P.S. I believe in you.
+		</div>
+
+	</footer>
+
 </body>
 </html>
