typekit was still busted

--- a/about/index.html
+++ b/about/index.html
@@ -14,8 +14,8 @@
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
 	<script src="http://use.typekit.net/bku8hxc.js"></script>
-	<script>try{Typekit.load();catch(e){}</script>
-	
+	<script>try{Typekit.load();}catch(e){}</script>
+
 	<title>Susan &times; Talks</title>
 
 </head>
@@ -37,10 +37,6 @@
 				<br><br>
 
 				She sketches incessantly. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes</a> out in the wild. She paints a <a href="http://sketch.bysusanlin.com/tagged/ghiblistainedglass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes an obsession of the craft exceeds all. 
-
-				<br><br>
-
-				She enjoys games and books. 
 
 				<br><br>
 
