--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
 	<script src="http://use.typekit.net/bku8hxc.js"></script>
-	<script>try{Typekit.load();catch(e){}</script>
+	<script>try{Typekit.load();}catch(e){}</script>
 
 	<title>Susan &times; Internet</title>
 
