--- a/about/index.html
+++ b/about/index.html
@@ -40,23 +40,12 @@
 
 				<br><br>
 
-				Elsewhere on the internet: 
-				<li> 
-					<a href="http://sketch.bysusanlin.com">Tumblr (Blog)</a> 
-				</li>				
-				<li> 
-					<a href="http://instagram.com/susanl">Instagram</a> 
-				</li>				
-				<li> 
-					<a href="http://twitter.com/bysusanlin">Twitter</a> 
-				</li>				
-				<li> 
-					<a href="http://pinterest.com/susanl/pins">Pinterest</a> 
-				</li>
-				<li>
-					<a href="http://dribbble.com/bysusanlin">Dribbble</a>
-				</li>
-
+				Elsewhere on the internet: <br>
+				<a href="http://sketch.bysusanlin.com">Tumblr (Blog)</a> | 
+				<a href="http://instagram.com/susanl">Instagram</a> | 
+				<a href="http://twitter.com/bysusanlin">Twitter</a> | 
+				<a href="http://pinterest.com/susanl/pins">Pinterest</a> | 
+				<a href="http://dribbble.com/bysusanlin">Dribbble</a>
 			</p>
 
 		</div> <!-- intro -->
