title is correct for about

--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
 	<script src="http://use.typekit.net/bku8hxc.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
 
-	<title>Susan &times; Talks</title>
+	<title>Susan &times; About</title>
 
 </head>
 
