add index to footer and about fix

--- a/index.html
+++ b/index.html
@@ -162,7 +162,13 @@
 
 		<ul>
 
-			<a href="about">
+			<a href="/">
+				<li>
+					00. Index
+				</li>
+			</a>
+
+			<a href="/about">
 				<li>
 					01. About
 				</li>
