--- a/about/index.html
+++ b/about/index.html
@@ -107,7 +107,13 @@
 
 		<ul>
 
-			<a href="about">
+			<a href="/">
+				<li>
+					00. Index
+				</li>
+			</a>
+
+			<a href="/about">
 				<li>
 					01. About
 				</li>
