--- a/talks/index.html
+++ b/talks/index.html
@@ -111,7 +111,13 @@
 
 		<ul>
 
-			<a href="about">
+			<a href="/">
+				<li>
+					00. Index
+				</li>
+			</a>
+
+			<a href="/about">
 				<li>
 					01. About
 				</li>
