--- a/work/index.html
+++ b/work/index.html
@@ -222,7 +222,13 @@
 
 		<ul>
 
-			<a href="about">
+			<a href="/">
+				<li>
+					00. Index
+				</li>
+			</a>
+
+			<a href="/about">
 				<li>
 					01. About
 				</li>
