add fuzzypickle sprite to footer

--- a/work/index.html
+++ b/work/index.html
@@ -261,6 +261,8 @@
 		<div class="clear"></div>
 
 		<div class="footnote"> 
+			<img src="/images/sprite-fp.png" width="27px">
+			<br>
 			Last updated April 2015. P.S. I believe in you.
 		</div>
 
