--- a/about/index.html
+++ b/about/index.html
@@ -146,7 +146,7 @@
 		<div class="clear"></div>
 
 		<div class="footnote"> 
-			<img src="/images/sprite-fp.png" width="27px">
+			<img src="/images/sprite-fp.png" width="27px" class="sprite">
 			<br>
 			Last updated April 2015. P.S. I believe in you.
 		</div>
