--- a/index.html
+++ b/index.html
@@ -89,8 +89,15 @@
   		
 			$(window).scroll(function() {
 
-				var scrollTopValue = $(window).scrollTop();
+				var tid = setInterval(walkCycle, 500);
+				function walkCycle() {
+					$('#earthbounded').toggleClass('left right');
+				}
+				function abortTimer() { // to be called when you want to stop the timer
+				  clearInterval(tid);
+				}
 
+				/*
 				if(parseInt(scrollTopValue/14)%2) {
 					$('#earthbounded').removeClass('left');
 					$('#earthbounded').addClass('right');
@@ -98,8 +105,9 @@
 				else {
 					$('#earthbounded').removeClass('right');
 					$('#earthbounded').addClass('left');
-				}
+				} */
 
+				var scrollTopValue = $(window).scrollTop();
 				var windowHeightValue = $(window).height();
 
 				// Waiting until reaching center
