actually use the code

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			  }
 			 
 			  if (scrollTimeOut !== null) {
-			    clearTimeout(scrollTimeout);
+			    clearTimeout(scrollTimeOut);
 			  }
 			  var scrollTimeOut = setTimeout(function () {
 			    stopWalkAnimation(walkAnimationInterval);
