--- a/index.html
+++ b/index.html
@@ -83,36 +83,37 @@
 		</ul>
 	</nav>
 	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
+
 	<script type="text/javascript">
 
-  	$(document).ready(function(){
- 
+  	$(document).ready(function() {
+
     var walkAnimationInterval = null;
     var scrollTimeOut = null;
- 
    
-    var animateWalk = function () {
+    var animateWalk = function() {
    		return setInterval(
-      	function () {$('#earthbounded').toggleClass('left right');},
-    	200
+      	function(){ 
+      		$('#earthbounded').toggleClass('left right');
+      	}, 200
     }
     
-    var stopWalkAnimation = function (tid) {
+    var stopWalkAnimation = function(tid) {
         clearInterval(tid);
     }
  
     $(window).on('scroll', function() {
-        if (walkAnimationInterval == null) {
-            walkAnimationInterval = animateWalk();
-        }
+       if (walkAnimationInterval == null) {
+       	walkAnimationInterval = animateWalk();
+       }
  
         if (scrollTimeOut !== null) {
-            clearTimeout(scrollTimeOut);
+        	clearTimeout(scrollTimeOut);
         }
         
         scrollTimeOut = setTimeout(function () {
-            stopWalkAnimation(walkAnimationInterval);
-            walkAnimationInterval = null;
+           stopWalkAnimation(walkAnimationInterval);
+           walkAnimationInterval = null;
         }, 100)
  
         /*
