actually use the code

--- a/index.html
+++ b/index.html
@@ -91,12 +91,11 @@
     var walkAnimationInterval = null;
     var scrollTimeOut = null;
    
-    var animateWalk = function() {
-   		return setInterval(
-      	function(){ 
-      		$('#earthbounded').toggleClass('left right');
-      	}, 200
-    }
+		var animateWalk = function () {
+			return setInterval(
+			function () {$('#earthbounded').toggleClass('left right');},
+			200
+		});
     
     var stopWalkAnimation = function(tid) {
         clearInterval(tid);
@@ -116,7 +115,7 @@
            walkAnimationInterval = null;
         }, 100)
  
-        /*
+
             var scrollTopValue = $(window).scrollTop();
             var windowHeightValue = $(window).height();
 
@@ -178,7 +177,6 @@
           
             }
 
-            */
 		    });
 		}); //document ready
 	</script>
