actually use the code

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 		var animateWalk = function () {
 			return setInterval(
 				function () {
-					$('#earthbounded').toggleClass('left walk');
-				}, 333)
+					$('#earthbounded').toggleClass('left right');
+				}, 100)
 		}
 
 		var stopWalkAnimation = function(tid) {
