get rid of the orphans

--- a/work/index.html
+++ b/work/index.html
@@ -128,7 +128,7 @@
 				Selected pieces: <br>
 				Watercolor slides &mdash; <a href="https://medium.com/@ienjoy/designing-while-shipping-1ed17f9200ca">Designing while Shipping</a>
 				<br>
-				<a href="https://www.youtube.com/watch?v=LXsmSB0FhCU">Recording of Jon presenting Designing While Shipping</a> at Touchpoint 2015.
+				<a href="https://www.youtube.com/watch?v=LXsmSB0FhCU">Recording of Jon presenting</a> at Touchpoint 2015.
 				<br>
 				<a href="https://twitter.com/Medium/status/507981746038509568">Featured post</a> on Medium &mdash; <a href="https://medium.com/poignantly-ordinary/the-1000th-cut-c588424c2a1a">The 1000th Cut</a>
 				<br>
