--- a/work/index.html
+++ b/work/index.html
@@ -127,8 +127,9 @@
 				Selected pieces:
 				<li>
 					Watercolor slides &mdash; <a href="https://medium.com/@ienjoy/designing-while-shipping-1ed17f9200ca">Designing while Shipping</a>
-					<br><br>
-					Bonus: <a href="https://www.youtube.com/watch?v=LXsmSB0FhCU">Recording of Jon presenting at Touchpoint 2015.</a>
+				</li>
+				<li>
+					&#8618; Bonus: <a href="https://www.youtube.com/watch?v=LXsmSB0FhCU">Recording of Jon presenting at Touchpoint 2015.</a>
 				</li>
 				<li>
 					<a href="https://twitter.com/Medium/status/507981746038509568">Featured post</a> on Medium &mdash; <a href="https://medium.com/poignantly-ordinary/the-1000th-cut-c588424c2a1a">The 1000th Cut</a>
@@ -170,8 +171,8 @@
 				Sketchnote Army &mdash; <a href="http://sketchnotearmy.com/blog/2014/6/25/cssconf-sketchnote-susan-lin.html">CSSconf 2014</a> & <a href="http://sketchnotearmy.com/blog/2013/4/2/interaction-2013-sketchnotes.html">Interaction 2013</a>
 				</li>
 				
+			<p> 
 				Contact me if you're interested in having me sketchnote your event. I will consider it if I am paid or sponsored: bysusanlin at gmail.
-
 			</p>
 		</div>
 
