formatting for bonus line

--- a/work/index.html
+++ b/work/index.html
@@ -126,10 +126,8 @@
 				
 				Selected pieces:
 				<li>
-					Watercolor slides &mdash; <a href="https://medium.com/@ienjoy/designing-while-shipping-1ed17f9200ca">Designing while Shipping</a>
-				</li>
-				<li>
-					&#8618; Bonus: <a href="https://www.youtube.com/watch?v=LXsmSB0FhCU">Recording of Jon presenting at Touchpoint 2015.</a>
+					Watercolor slides — <a href="https://medium.com/@ienjoy/designing-while-shipping-1ed17f9200ca">Designing while Shipping</a> <br>
+  					<span>&nbsp;&nbsp;&nbsp;</span> ↪ Bonus: <a href="https://www.youtube.com/watch?v=LXsmSB0FhCU">Recording of Jon presenting at Touchpoint 2015</a>
 				</li>
 				<li>
 					<a href="https://twitter.com/Medium/status/507981746038509568">Featured post</a> on Medium &mdash; <a href="https://medium.com/poignantly-ordinary/the-1000th-cut-c588424c2a1a">The 1000th Cut</a>
