--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="author" content="Susan Lin, Susan L., Susan, bysusanlin, @bysusanlin">
 
 	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede">
+	<meta name="p:domain_verify" content="89bcb4858abdc44a2d4c6a4c223f34d8"/>
 
 	<link rel="stylesheet" href="/css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
