add shop link, add patreon to about, made heart pink

--- a/about/index.html
+++ b/about/index.html
@@ -45,7 +45,8 @@
 				<a href="http://instagram.com/susanl">Instagram</a> | 
 				<a href="http://twitter.com/bysusanlin">Twitter</a> | 
 				<a href="http://pinterest.com/susanl/pins">Pinterest</a> | 
-				<a href="http://dribbble.com/bysusanlin">Dribbble</a>
+				<a href="http://dribbble.com/bysusanlin">Dribbble</a> |
+				<a href="http://patreon.com/susan">Patreon
 			</p>
 
 		</div> <!-- intro -->
@@ -61,7 +62,7 @@
 				<br>
 				<a href="https://github.com/bysl/bysl.github.io">View the source code on Github.</a>
 				<br><br>
-				&#x2764;
+				<span class="typeHighlight">&#x2764;</a>
 			</p>
 		</div>
 
@@ -92,6 +93,11 @@
 			<a href="http://sketch.bysusanlin.com">
 				<li>
 					Blog
+				</li>
+			</a>			
+			<a href="http://shop.bysusanlin.com/susan">
+				<li>
+					Shop
 				</li>
 			</a>
 			<li class="typeLowlight">
@@ -134,6 +140,12 @@
 			<a href="http://sketch.bysusanlin.com">
 				<li>
 					04. Blog
+				</li>
+			</a>			
+
+			<a href="http://shop.bysusanlin.com/susan">
+				<li>
+					05. Shop
 				</li>
 			</a>
 
