--- a/talks/index.html
+++ b/talks/index.html
@@ -97,6 +97,11 @@
 				<li>
 					Blog
 				</li>
+			</a>			
+			<a href="http://shop.bysusanlin.com/susan">
+				<li>
+					Shop
+				</li>
 			</a>
 			<li class="typeLowlight">
 				&mdash;
@@ -139,6 +144,12 @@
 				<li>
 					04. Blog
 				</li>
+			</a>			
+
+			<a href="http://shop.bysusanlin.com/susan">
+				<li>
+					05. Shop
+				</li>
 			</a>
 
 			<li class="typeHighlight">
@@ -150,7 +161,7 @@
 		<div class="clear"></div>
 
 		<div class="footnote"> 
-			<img src="/images/sprite-fp.png" width="27px">
+			<img src="/images/sprite-fp.png" width="27px" class="sprite">
 			<br>
 			Last updated April 2015. P.S. I believe in you.
 		</div>
@@ -158,4 +169,5 @@
 	</footer>
 
 </body>
+</html>
 </html>
