--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 				<li>
 					Blog
 				</li>
+			</a>			
+			<a href="http://shop.bysusanlin.com/susan">
+				<li>
+					Shop
+				</li>
 			</a>
 			<li class="typeLowlight">
 				&mdash;
@@ -83,6 +88,7 @@
 			</li>
 		</ul>
 	</nav>
+	
 	<script type="text/javascript" src="/js/jquery-1.8.3.min.js"> </script>
 
 	<script type="text/javascript">
@@ -181,55 +187,61 @@
 	}); //document ready
 </script>
 
-<footer>
+	<footer>
 
-	<ul>
+		<ul>
 
-		<a href="/">
-			<li>
-				00. Index
+			<a href="/">
+				<li>
+					00. Index
+				</li>
+			</a>
+
+			<a href="/about">
+				<li>
+					01. About
+				</li>
+			</a>
+
+			<a href="/work">
+				<li>
+					02. Work
+				</li>
+			</a>
+
+			<a href="/talks">
+				<li>
+					03. Talks
+				</li>
+			</a>			
+
+			<a href="http://sketch.bysusanlin.com">
+				<li>
+					04. Blog
+				</li>
+			</a>			
+
+			<a href="http://shop.bysusanlin.com/susan">
+				<li>
+					05. Shop
+				</li>
+			</a>
+
+			<li class="typeHighlight">
+				&#10048;
 			</li>
-		</a>
 
-		<a href="/about">
-			<li>
-				01. About
-			</li>
-		</a>
+		</ul>
 
-		<a href="/work">
-			<li>
-				02. Work
-			</li>
-		</a>
+		<div class="clear"></div>
 
-		<a href="/talks">
-			<li>
-				03. Talks
-			</li>
-		</a>			
+		<div class="footnote"> 
+			<img src="/images/sprite-fp.png" width="27px" class="sprite">
+			<br>
+			Last updated April 2015. P.S. I believe in you.
+		</div>
 
-		<a href="http://sketch.bysusanlin.com">
-			<li>
-				04. Blog
-			</li>
-		</a>
-
-		<li class="typeHighlight">
-			&#10048;
-		</li>
-
-	</ul>
-
-	<div class="clear"></div>
-
-	<div class="footnote"> 
-		<img src="/images/sprite-fp.png" width="27px">
-		<br>
-		Last updated April 2015. P.S. I believe in you.
-	</div>
-
-</footer>
+	</footer>
 
 </body>
 </html>
