--- a/work/index.html
+++ b/work/index.html
@@ -218,6 +218,11 @@
 				<li>
 					Blog
 				</li>
+			</a>			
+			<a href="http://shop.bysusanlin.com/susan">
+				<li>
+					Shop
+				</li>
 			</a>
 			<li class="typeLowlight">
 				&mdash;
@@ -260,6 +265,12 @@
 				<li>
 					04. Blog
 				</li>
+			</a>			
+
+			<a href="http://shop.bysusanlin.com/susan">
+				<li>
+					05. Shop
+				</li>
 			</a>
 
 			<li class="typeHighlight">
@@ -271,7 +282,7 @@
 		<div class="clear"></div>
 
 		<div class="footnote"> 
-			<img src="/images/sprite-fp.png" width="27px">
+			<img src="/images/sprite-fp.png" width="27px" class="sprite">
 			<br>
 			Last updated April 2015. P.S. I believe in you.
 		</div>
