closed the patreon link, removed sakura from footer

--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
 				<a href="http://twitter.com/bysusanlin">Twitter</a> | 
 				<a href="http://pinterest.com/susanl/pins">Pinterest</a> | 
 				<a href="http://dribbble.com/bysusanlin">Dribbble</a> |
-				<a href="http://patreon.com/susan">Patreon
+				<a href="http://patreon.com/susan">Patreon</a>
 			</p>
 
 		</div> <!-- intro -->
@@ -148,11 +148,7 @@
 					05. Shop
 				</li>
 			</a>
-
-			<li class="typeHighlight">
-				&#10048;
-			</li>
-
+			
 		</ul>
 
 		<div class="clear"></div>
