updated shop link

--- a/work/index.html
+++ b/work/index.html
@@ -219,7 +219,7 @@
 					Blog
 				</li>
 			</a>			
-			<a href="http://shop.bysusanlin.com/susan">
+			<a href="https://www.amanufactory.com/susan">
 				<li>
 					Shop
 				</li>
@@ -267,7 +267,7 @@
 				</li>
 			</a>			
 
-			<a href="http://shop.bysusanlin.com/susan">
+			<a href="https://www.amanufactory.com/susan">
 				<li>
 					05. Shop
 				</li>
