--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,7 @@
 					Blog
 				</li>
 			</a>			
-			<a href="http://shop.bysusanlin.com/susan">
+			<a href="https://www.amanufactory.com/susan">
 				<li>
 					Shop
 				</li>
@@ -143,7 +143,7 @@
 				</li>
 			</a>			
 
-			<a href="http://shop.bysusanlin.com/susan">
+			<a href="https://www.amanufactory.com/susan">
 				<li>
 					05. Shop
 				</li>
