--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					Blog
 				</li>
 			</a>			
-			<a href="http://shop.bysusanlin.com/susan">
+			<a href="https://www.amanufactory.com/susan">
 				<li>
 					Shop
 				</li>
@@ -221,7 +221,7 @@
 				</li>
 			</a>			
 
-			<a href="http://shop.bysusanlin.com/susan">
+			<a href="https://www.amanufactory.com/susan">
 				<li>
 					05. Shop
 				</li>
