--- a/talks/index.html
+++ b/talks/index.html
@@ -98,7 +98,7 @@
 					Blog
 				</li>
 			</a>			
-			<a href="http://shop.bysusanlin.com/susan">
+			<a href="https://www.amanufactory.com/susan">
 				<li>
 					Shop
 				</li>
@@ -146,7 +146,7 @@
 				</li>
 			</a>			
 
-			<a href="http://shop.bysusanlin.com/susan">
+			<a href="https://www.amanufactory.com/susan">
 				<li>
 					05. Shop
 				</li>
