--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,11 @@
 
 			<p>
 
-				Hello World; Susan designs for a living. Currently, she works on <a href="http://guestcenter.opentable.com">OpenTable's restaurant product.</a> She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
+				Hello World; Susan is a Designer who codes at Treehouse and an Illustrator primarily painting with watercolor.
+
+				<br><br>
+
+				Previously, she worked on OpenTable's and Trulia's design teams where she built styleguides in addition to user experiences. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
 
 				<br><br>
 
@@ -47,6 +51,7 @@
 				<a href="http://pinterest.com/susanl/pins">Pinterest</a> | 
 				<a href="http://dribbble.com/bysusanlin">Dribbble</a> |
 				<a href="http://patreon.com/susan">Patreon</a>
+
 			</p>
 
 		</div> <!-- intro -->
@@ -153,10 +158,10 @@
 
 		<div class="clear"></div>
 
-		<div class="footnote"> 
+		<div class="footnote">
 			<img src="/images/sprite-fp.png" width="27px" class="sprite">
 			<br>
-			Last updated April 2015. P.S. I believe in you.
+			Last updated July 2015. P.S. I believe in you.
 		</div>
 
 	</footer>
