--- a/about/index.html
+++ b/about/index.html
@@ -63,11 +63,9 @@
 			<p>
 				I drafted, designed, and coded this bit of the internet. The landing page is made with love to the Mother series.
 				<br><br>
-				<a href="http://sketch.bysusanlin.com/tagged/pixel-art">See the original pixel artwork.</a> 
+				<a href="http://sketch.bysusanlin.com/tagged/pixel-art">See the pixel artwork process.</a> 
 				<br>
 				<a href="https://github.com/bysl/bysl.github.io">View the source code on Github.</a>
-				<br><br>
-				<span class="typeHighlight">&#x2764;</a>
 			</p>
 		</div>
 
