edit about photo

--- a/about/index.html
+++ b/about/index.html
@@ -58,7 +58,7 @@
 
 		<div>
 
-			<img src="/images/about/bysusanlin.jpg">
+			<img src="/images/about/bysusanlin.jpg" height="200px">
 
 			<p>
 				I drafted, designed, and coded this bit of the internet. The landing page is made with love to the Mother series.
