--- a/about/index.html
+++ b/about/index.html
@@ -103,6 +103,11 @@
 					Shop
 				</li>
 			</a>
+			<a href="https://www.patreon.com/susan">
+				<li>
+					Patreon
+				</li>
+			</a>
 			<li class="typeLowlight">
 				&mdash;
 			</li>								
