--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
 				<li>
 					Shop
 				</li>
+			</a>			
+			<a href="https://www.patreon.com/susan">
+				<li>
+					Patreon
+				</li>
 			</a>
 			<li class="typeLowlight">
 				&mdash;
