--- a/work/index.html
+++ b/work/index.html
@@ -37,7 +37,7 @@
 			<img src="/images/work/guestcenter.png">
 			<h2> Guest Center </h2>
 			<p> 
-				I currently work on <a href="http://guestcenter.opentable.com">OpenTable's restaurant products.</a> Experience designers are responsible for design work across platforms: web, mobile web, and iPad. I lead design on the recently shipped <a href="https://community.otrestaurant.com/t5/Conversations/Floor-Plan-Availability-View-and-Other-New-Guest-Center-Features/td-p/4036"> reservation timeline.</a>
+				I worked on <a href="http://guestcenter.opentable.com">OpenTable's restaurant products.</a> Experience designers are responsible for design work across platforms: web, mobile web, and iPad. I lead design on the <a href="https://community.otrestaurant.com/t5/Conversations/Floor-Plan-Availability-View-and-Other-New-Guest-Center-Features/td-p/4036"> reservation timeline</a> as well as the beta website.
 		</div>
 
 		<div>
@@ -222,6 +222,11 @@
 			<a href="https://www.amanufactory.com/susan">
 				<li>
 					Shop
+				</li>
+			</a>
+			<a href="https://www.patreon.com/susan">
+				<li>
+					Patreon
 				</li>
 			</a>
 			<li class="typeLowlight">
