--- a/work/index.html
+++ b/work/index.html
@@ -29,7 +29,8 @@
 			<p>
 		 		These are some of my favorite things I've had the honor of designing, coding, writing, and illustrating. &#10048;
 		 		<br><br>
-		 		For a formal work history, take this <a href="http://bysusanlin.com/SusanLin-resume.pdf">PDF resume.</a>
+		 		I am not looking for new design work &mdash; Recruiters, you will be ignored. I will consider watercolor illustration commissions! <a href="http://instagram.com/susanl">Instagram is the best place get an idea of what my art style is like. bysusanlin at gmail.
+		 		<!-- For a formal work history, take this <a href="http://bysusanlin.com/SusanLin-resume.pdf">PDF resume.</a> -->
 			</p>
 		</div>
 
