--- a/work/index.html
+++ b/work/index.html
@@ -29,12 +29,12 @@
 			<p>
 		 		These are some of my favorite things I've had the honor of designing, coding, writing, and illustrating.
 		 		<br><br>
-		 		Availiblity: 
+		 		Availability: 
 		 		<li> 
 		 			I'm not looking for design work &mdash; Recruiters, you will be ignored. 
 		 		</li>
 		 		<li>
-		 			I will consider illustration commissions! <a href="http://instagram.com/susanl">Instagram</a> is the best to get an idea of what my art style is like. bysusanlin at gmail.
+		 			I will consider watercolor illustration commissions! bysusanlin at gmail.
 		 		</li>
 		 		<!-- For a formal work history, take this <a href="http://bysusanlin.com/SusanLin-resume.pdf">PDF resume.</a> -->
 			</p>
