--- a/work/index.html
+++ b/work/index.html
@@ -34,7 +34,7 @@
 		 			I'm not looking for design work &mdash; Recruiters, you will be ignored. 
 		 		</li>
 		 		<li>
-		 			I will consider watercolor illustration commissions! bysusanlin at gmail.
+		 			I'll consider watercolor illustration commissions! bysusanlin at gmail.
 		 		</li>
 		 		<!-- For a formal work history, take this <a href="http://bysusanlin.com/SusanLin-resume.pdf">PDF resume.</a> -->
 			</p>
