WHOA an upcoming talks section

--- a/talks/index.html
+++ b/talks/index.html
@@ -35,6 +35,11 @@
 			</p>
 
 			<p>
+				Upcoming Talks:
+				<li> WaffleJS &mdash; <a href="https://ti.to/wafflejs/august">No Wasted Paint</a> </li>
+			</p>
+
+			<p>
 				Past Talks:
 				<li> IXDA SF &mdash; <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> </li>
 
