added codepen link

--- a/about/index.html
+++ b/about/index.html
@@ -45,11 +45,12 @@
 				<br><br>
 
 				Elsewhere on the internet: <br>
-				<a href="http://sketch.bysusanlin.com">Tumblr (Blog)</a> | 
+				<a href="http://sketch.bysusanlin.com">Blog</a> | 
 				<a href="http://instagram.com/susanl">Instagram</a> | 
 				<a href="http://twitter.com/bysusanlin">Twitter</a> | 
 				<a href="http://pinterest.com/susanl/pins">Pinterest</a> | 
 				<a href="http://dribbble.com/bysusanlin">Dribbble</a> |
+				<a href="http://codepen.io/bysusanlin">CodePen</a> | 
 				<a href="http://patreon.com/susan">Patreon</a>
 
 			</p>
