separated design and illustration into their own sections. update navigation to reflect that.

--- a/talks/index.html
+++ b/talks/index.html
@@ -88,9 +88,14 @@
 					About
 				</li>
 			</a>			
-			<a href="/work">
+			<a href="/about">
 				<li>
-					Work
+					About
+				</li>
+			</a>			
+			<a href="/design">
+				<li>
+					Design
 				</li>
 			</a>
 			<a href="/talks">
@@ -128,37 +133,49 @@
 
 			<a href="/">
 				<li>
-					00. Index
+					Index
 				</li>
 			</a>
 
 			<a href="/about">
 				<li>
-					01. About
+					About
 				</li>
 			</a>
 
-			<a href="/work">
+			<a href="/design">
 				<li>
-					02. Work
+					Design
+				</li>
+			</a>
+
+			<a href="/illustration">
+				<li>
+					Illustration
 				</li>
 			</a>
 
 			<a href="/talks">
 				<li>
-					03. Talks
+					Talks
 				</li>
 			</a>			
 
 			<a href="http://sketch.bysusanlin.com">
 				<li>
-					04. Blog
+					Blog
 				</li>
 			</a>			
 
 			<a href="https://www.amanufactory.com/susan">
 				<li>
-					05. Shop
+					Shop
+				</li>
+			</a>			
+
+			<a href="https://www.patreon.com/susan">
+				<li>
+					Patreon
 				</li>
 			</a>
 
@@ -175,5 +192,4 @@
 	</footer>
 
 </body>
-</html>
 </html>
