--- a/about/index.html
+++ b/about/index.html
@@ -84,9 +84,14 @@
 					About
 				</li>
 			</a>			
-			<a href="/work">
+			<a href="/about">
 				<li>
-					Work
+					About
+				</li>
+			</a>			
+			<a href="/design">
+				<li>
+					Design
 				</li>
 			</a>
 			<a href="/talks">
@@ -124,45 +129,57 @@
 
 			<a href="/">
 				<li>
-					00. Index
+					Index
 				</li>
 			</a>
 
 			<a href="/about">
 				<li>
-					01. About
+					About
 				</li>
 			</a>
 
-			<a href="/work">
+			<a href="/design">
 				<li>
-					02. Work
+					Design
+				</li>
+			</a>
+
+			<a href="/illustration">
+				<li>
+					Illustration
 				</li>
 			</a>
 
 			<a href="/talks">
 				<li>
-					03. Talks
+					Talks
 				</li>
 			</a>			
 
 			<a href="http://sketch.bysusanlin.com">
 				<li>
-					04. Blog
+					Blog
 				</li>
 			</a>			
 
 			<a href="https://www.amanufactory.com/susan">
 				<li>
-					05. Shop
+					Shop
+				</li>
+			</a>			
+
+			<a href="https://www.patreon.com/susan">
+				<li>
+					Patreon
 				</li>
 			</a>
-			
+
 		</ul>
 
 		<div class="clear"></div>
 
-		<div class="footnote">
+		<div class="footnote"> 
 			<img src="/images/sprite-fp.png" width="27px" class="sprite">
 			<br>
 			Last updated July 2015. P.S. I believe in you.
