when copy and paste goes wrong you get 2 about links

--- a/design/index.html
+++ b/design/index.html
@@ -151,14 +151,14 @@
 					About
 				</li>
 			</a>			
-			<a href="/about">
-				<li>
-					About
-				</li>
-			</a>			
 			<a href="/design">
 				<li>
 					Design
+				</li>
+			</a>			
+			<a href="/illustration">
+				<li>
+					Illustration
 				</li>
 			</a>
 			<a href="/talks">
