--- a/about/index.html
+++ b/about/index.html
@@ -28,11 +28,12 @@
 			</h2>
 
 			<p>
+				Hello World; Susan is a Designer who codes at <a href="http://teamtreehouse.com">Treehouse</a> and an Illustrator.
+			</p>
 
-				Hello World; Susan is a Designer who codes at <a href="http://teamtreehouse.com">Treehouse</a> and an Illustrator primarily painting with watercolor.
+			<img src="/images/about/bysusanlin-painting.jpg">
 
-				<br><br>
-
+			<p>
 				Previously, she worked on OpenTable's and Trulia's design teams where she <a href="/talks">built styleguides</a> in addition to user experiences. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
 
 				<br><br>
