--- a/about/index.html
+++ b/about/index.html
@@ -31,8 +31,6 @@
 				Hello World; Susan is a Designer who codes at <a href="http://teamtreehouse.com">Treehouse</a> and an Illustrator.
 			</p>
 
-			<img src="/images/about/bysusanlin-painting.jpg">
-
 			<p>
 				Previously, she worked on OpenTable's and Trulia's design teams where she <a href="/talks">built styleguides</a> in addition to user experiences. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
 
@@ -57,7 +55,7 @@
 
 		<div>
 
-			<img src="/images/about/bysusanlin.jpg" height="200px">
+			<img src="/images/about/bysusanlin.painting.jpg">
 
 			<p>
 				I drafted, designed, and coded this bit of the internet. The landing page is made with love to the Mother series.
