--- a/about/index.html
+++ b/about/index.html
@@ -57,6 +57,14 @@
 
 			<img src="/images/about/bysusanlin.painting.jpg">
 
+			<br>
+
+			<em>
+				'Sleeping Totoro' is available as a canvas print in <a href="https://www.amanufactory.com/susan">my shop.</a>
+			</em>
+
+			<br><br>
+
 			<p>
 				I drafted, designed, and coded this bit of the internet. The landing page is made with love to the Mother series.
 				<br><br>
