update to talks page

--- a/talks/index.html
+++ b/talks/index.html
@@ -33,9 +33,9 @@
 
 			<p>
 				Past Talks:
-				<li> WaffleJS &mdash; <a href="https://ti.to/wafflejs/august">No Wasted Paint</a> </li>
+				<li> WaffleJS &mdash; <a href="https://ti.to/wafflejs/august">No Wasted Paint</a> | <a href="http://sketch.bysusanlin.com/post/126377952333/no-wasted-paint">Write-up</a> </li>
 
-				<li> IXDA SF &mdash; <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> </li>
+				<li> IXDA SF &mdash; <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> | <a href="#speaking-the-code">Video</a> </li>
 
 				<li> Thoughtbot Product Design Talks &mdash; <a href="http://www.eventbrite.com/e/taco-tuesdays-a-product-design-talk-series-hosted-by-thoughtbot-tickets-11179142115"> Process is Ugly</a> </li>
 
@@ -50,6 +50,8 @@
 		</div>
 
 		<div class="video">
+
+			<a name="speaking-the-code"></a>
 
 			<img src="/images/talks/bysusanlin-speaking.jpg">
 
