--- a/design/index.html
+++ b/design/index.html
@@ -169,7 +169,7 @@
 					Blog
 				</li>
 			</a>			
-			<a href="https://www.amanufactory.com/susan">
+			<a href="https://www.shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
@@ -228,7 +228,7 @@
 				</li>
 			</a>			
 
-			<a href="https://www.amanufactory.com/susan">
+			<a href="https://www.shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
