--- a/illustration/index.html
+++ b/illustration/index.html
@@ -139,7 +139,7 @@
 					Blog
 				</li>
 			</a>			
-			<a href="https://www.amanufactory.com/susan">
+			<a href="https://www.shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
@@ -197,7 +197,7 @@
 				</li>
 			</a>			
 
-			<a href="https://www.amanufactory.com/susan">
+			<a href="https://www.shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
