--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					Blog
 				</li>
 			</a>			
-			<a href="https://www.amanufactory.com/susan">
+			<a href="https://www.shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
@@ -234,7 +234,7 @@
 				</li>
 			</a>			
 
-			<a href="https://www.amanufactory.com/susan">
+			<a href="https://www.shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
