--- a/about/index.html
+++ b/about/index.html
@@ -59,7 +59,7 @@
 			<img src="/images/about/bysusanlin.painting.jpg">
 			<br>
 			<em>
-				'Sleeping Totoro' is available as a canvas print in <a href="https://www.shop.bysusanlin.com">my shop.</a>
+				'Sleeping Totoro' is available as a canvas print in <a href="http://www.shop.bysusanlin.com">my shop.</a>
 			</em>
 
 			<br><br>
@@ -107,7 +107,7 @@
 					Blog
 				</li>
 			</a>			
-			<a href="https://www.shop.bysusanlin.com">
+			<a href="http://www.shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
@@ -166,7 +166,7 @@
 				</li>
 			</a>			
 
-			<a href="https://www.shop.bysusanlin.com">
+			<a href="http://www.shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
