--- a/talks/index.html
+++ b/talks/index.html
@@ -104,7 +104,7 @@
 					Blog
 				</li>
 			</a>			
-			<a href="https://www.shop.bysusanlin.com">
+			<a href="http://www.shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
@@ -163,7 +163,7 @@
 				</li>
 			</a>			
 
-			<a href="https://www.shop.bysusanlin.com">
+			<a href="http://www.shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
